dark mode fix

--- a/src/public/css/dark.css
+++ b/src/public/css/dark.css
@@ -136,4 +136,5 @@ textarea, input[type=text], input[type=number]
 .d2h-wrapper
 {
     color: rgb(33, 37, 41);
+    background-color: white;
 }
